force-app/main/default/objects/IntegrationLog__c/IntegrationLog__c.object-meta.xml
<CustomObject>
    <label>Registo de Integração</label>
    <nameField>
        <displayFormat>IL-{000000}</displayFormat>
        <label>Registo #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registos de Integração</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>