force-app/main/default/objects/IntegrationLog__c/fields/DurationMs__c.field-meta.xml
<CustomField>
    <fullName>DurationMs__c</fullName>
    <label>Duração (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>