force-app/main/default/objects/IntegrationLog__c/fields/EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>EndDateTime__c</fullName>
    <label>Data/Hora Fim</label>
    <type>DateTime</type>
</CustomField>