force-app/main/default/objects/IntegrationLog__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <label>Id Externo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>