force-app/main/default/objects/IntegrationLog__c/fields/HttpStatusCode__c.field-meta.xml
<CustomField>
    <fullName>HttpStatusCode__c</fullName>
    <label>Código HTTP</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>