force-app/main/default/objects/IntegrationLog__c/fields/IntegrationKey__c.field-meta.xml
<CustomField>
    <fullName>IntegrationKey__c</fullName>
    <label>Chave de Integração</label>
    <length>80</length>
    <type>Text</type>
</CustomField>