force-app/main/default/objects/IntegrationLog__c/fields/RequestBody__c.field-meta.xml
<CustomField>
    <fullName>RequestBody__c</fullName>
    <label>Body da Requisição</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>