force-app/main/default/objects/IntegrationLog__c/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <label>Sistema Origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Pyxis</fullName>
            </value>
            <value>
                <fullName>SOP</fullName>
            </value>
            <value>
                <fullName>MDM</fullName>
            </value>
            <value>
                <fullName>L2Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>