force-app/main/default/objects/IntegrationLog__c/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <label>Data/Hora Início</label>
    <type>DateTime</type>
</CustomField>