force-app/main/default/objects/IntegrationLog__c/fields/TargetRecordId__c.field-meta.xml
<CustomField>
    <fullName>TargetRecordId__c</fullName>
    <label>Registo Salesforce</label>
    <length>18</length>
    <type>Text</type>
</CustomField>