force-app/main/default/objects/IntegrationLog__c/fields/TargetSObject__c.field-meta.xml
<CustomField>
    <fullName>TargetSObject__c</fullName>
    <label>Objeto Salesforce</label>
    <length>40</length>
    <type>Text</type>
</CustomField>