force-app/main/default/objects/IntegrationLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>ErrorMessage__c</columns>
    <columns>StartDateTime__c</columns>
    <columns>DurationMs__c</columns>
    <columns>SourceSystem__c</columns>
    <columns>TargetSystem__c</columns>
    <columns>Direction__c</columns>
    <columns>HttpStatusCode__c</columns>
    <columns>Endpoint__c</columns>
    <columns>HttpMethod__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SourceSystem__c</field>
        <operation>equals</operation>
        <value>L2Service</value>
    </filters>
    <label>All</label>
</ListView>